# wormhole

./: .dockerignore  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  justfile  zensical.toml
.claude/: settings.json
.github/workflows/: build-with-nix.yml  ci.yml  docker.yml  docs.yml
analytics/: assets.go  go.mod  go.sum  gomod2nix.toml  sqlc.yaml
analytics/cmd/server/: main.go
analytics/internal/domain/: event.go
analytics/internal/event/: consumer.go  convert.go  convert_test.go
analytics/internal/repository/: analytics.go
analytics/internal/repository/mysql/: insert.sql.go  models.go  record.go  store.go  store_benchmark_test.go  store_test.go  telemetry.go
analytics/internal/repository/store/: insert.sql.go  models.go
analytics/internal/repository/tidb/: record.go  store_test.go
analytics/internal/telemetry/: setup.go
analytics/pb/v1/: analytics.pb.go  redirector.pb.go  redirector_grpc.pb.go  shortcode.pb.go  shortener.pb.go  shortener_grpc.pb.go
analytics/sqlc/: schema.sql
analytics/sqlc/migrations/: 20260303115013_fact_clicks.sql  20260303115100_dim_visitors.sql  20260303115101_fact_clicks_fk.sql
analytics/sqlc/queries/: insert.sql
api/shortener/v1/: shortener.proto
crates/wormhole-cache/: Cargo.toml
crates/wormhole-cache/src/: bloom_filter.rs  cache.rs  error.rs  layered.rs  lib.rs  moka.rs  redis.rs  redis_ha.rs
crates/wormhole-cache/tests/: redis_cache_integration.rs  redis_ha_cache_integration.rs
crates/wormhole-core/: Cargo.toml
crates/wormhole-core/src/: base58.rs  cache.rs  error.rs  lib.rs  repository.rs  shortcode.rs  shortener.rs  slim_id.rs
crates/wormhole-core/src/repository/: memory.rs
crates/wormhole-gateway/: Cargo.toml  build.rs
crates/wormhole-gateway/src/: adapter.rs  app.rs  backend.rs  cli.rs  error.rs  lib.rs  main.rs  port.rs  state.rs  telemetry.rs
crates/wormhole-gateway/src/adapter/: grpc.rs  local.rs
crates/wormhole-gateway/src/backend/: error.rs  url_write.rs
crates/wormhole-gateway/src/handlers/: health.rs  url.rs
crates/wormhole-gateway/src/model/: url.rs
crates/wormhole-generator/: Cargo.toml
crates/wormhole-generator/src/: lib.rs  obfuscated.rs  seq.rs
crates/wormhole-proto-schema/: Cargo.toml  build.rs
crates/wormhole-proto-schema/proto/redirector/v1/: redirector.proto
crates/wormhole-proto-schema/proto/v1/: redirector.proto  shortcode.proto  shortener.proto
crates/wormhole-proto-schema/src/: lib.rs
crates/wormhole-proto-schema/src/shortcode/: v1.rs
crates/wormhole-redirector/: Cargo.toml
crates/wormhole-redirector/src/: error.rs  grpc.rs  lib.rs  redirector.rs  service.rs
crates/wormhole-redirector/src/cache/: bloom_filter.rs  layered.rs  mod.rs  moka.rs  redis.rs  redis_ha.rs
crates/wormhole-redirector/src/repository/: cached.rs  mod.rs  redis.rs
crates/wormhole-redirector/tests/: redis_cache_integration.rs  redis_ha_cache_integration.rs
crates/wormhole-shortener/: Cargo.toml
crates/wormhole-shortener/benches/: shorten_mysql_qps.rs
crates/wormhole-shortener/src/: error.rs  generator.rs  grpc.rs  lib.rs  repository.rs  service.rs  shortcode.rs  shortener.rs
crates/wormhole-shortener/src/generator/: seq.rs
crates/wormhole-shortener/src/repository/: memory.rs
crates/wormhole-storage/: Cargo.toml
crates/wormhole-storage/ddl/mysql/: 20260227134941_create_short_urls_table.sql  short_urls.sql
crates/wormhole-storage/src/: error.rs  lib.rs  memory.rs  mysql.rs
crates/wormhole-storage/tests/: mysql_repository_integration.rs
crates/wormhole-telemetry/src/extractor/: grpc.rs  http.rs
crates/wormhole-telemetry/src/otel/: resource.rs  trace.rs
crates/wormhole-test-infra/: Cargo.toml
crates/wormhole-test-infra/src/: error.rs  lib.rs  mysql.rs  redis.rs
crates/wormhole-test-infra/src/redis/: config.rs  ha.rs  master.rs  replica.rs  sentinel.rs
crates/wormhole-tinyflake/: Cargo.toml  DESIGN.md
crates/wormhole-tinyflake/src/: lib.rs  tiny_id.rs  tinyflake.rs
docs/: index.md  markdown.md  workload-model.md
docs/system-design/: bloom-filter-infeasibility.md  tinyflake-throughput.md  workload.md
examples/rest/: health.http  short.http
infra/dev/: docker-compose.yml
infra/dev/db/: docker-compose.yml
infra/dev/kafka/: docker-compose.yml
infra/dev/mysql/: docker-compose.yml
infra/dev/observability/: docker-compose.yml
infra/dev/redis/: docker-compose.yml
infra/dev/redis/sentinel/: sentinel-template.conf  sentinel.conf
nix/go/: gomod2nix.nix
proto/: buf.yaml
proto/analytics/v1/: analytics.proto
proto/redirector/v1/: redirector.proto
proto/shortcode/v1/: shortcode.proto
proto/shortener/v1/: shortener.proto
proto/tinyflake/v1/: tinyflake.proto
proto/v1/: analytics.proto  redirector.proto  shortcode.proto  shortener.proto
rust/core/: Cargo.toml
rust/core/src/: base58.rs  lib.rs  shortcode.rs
rust/proto/: Cargo.toml
rust/telemetry/: Cargo.toml
rust/telemetry/src/: lib.rs  otel.rs
services/analytics/: go.mod  go.sum  gomod2nix.toml
services/analytics/internal/domain/: event.go  stats.go
services/analytics/internal/repository/: repository.go
services/analytics/internal/service/: analytics.go
services/analytics/sqlc/: assets.go
services/analytics/sqlc/migrations/: 20260303115013_fact_clicks.sql  20260303115100_dim_visitors.sql  20260305163833_dim_url.sql
services/analytics/sqlc/queries/: insert.sql
services/gateway/: Cargo.toml
services/gateway/docs/: REST.md
services/gateway/src/: error.rs  lib.rs  model.rs  state.rs
services/gateway/src/adapter/: grpc.rs
services/gateway/src/backend/: error.rs  url_read.rs
services/gateway/src/model/: health.rs  url.rs
services/redirector/: go.mod
services/redirector/cmd/server/: main.go
services/redirector/internal/domain/: url.go
services/redirector/internal/repository/: repository.go
services/shortener/: go.mod
services/tinyflake/: Cargo.toml  build.rs
services/tinyflake/src/: clock.rs  error.rs  lib.rs
(+16 files in other folders)
