[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = { version = "0.14.3" }
prost = { version = "0.14.3" }
tonic-prost = { version = "0.14.3" }
tonic-prost-build = { version = "0.14.3" }

# Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.22"
