[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# workspace members
wormhole-core = { path = "crates/wormhole-core" }
wormhole-proto-schema = { path = "crates/wormhole-proto-schema" }
wormhole-gateway = { path = "crates/wormhole-gateway" }
wormhole-shortener = { path = "crates/wormhole-shortener" }
wormhole-redirector = { path = "crates/wormhole-redirector" }
wormhole-storage = { path = "crates/wormhole-storage" }
wormhole-test-infra = { path = "crates/wormhole-test-infra" }

# async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = { version = "0.14.3" }
prost = { version = "0.14.3" }
prost-types = { version = "0.14.3" }
tonic-prost = { version = "0.14.3" }
tonic-prost-build = { version = "0.14.3" }

# Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Time
jiff = { version = "0.2.19", features = ["serde"] }

# Async trait
async-trait = "0.1.89"

# Utils
typed-builder = { version = "0.23.2" }

# Redis
redis = { version = "1.0.3", features = ["aio", "tokio-comp"] }
