[package]
name = "wormhole-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Serialization
serde = { workspace = true }

# Time
jiff = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async trait
async-trait = { workspace = true }

[dev-dependencies]
