[package]
name = "wormhole-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Serialization
serde = { workspace = true }

# Time
jiff = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async trait
async-trait = { workspace = true }

# utils
modular-bitfield = { version = "0.13.1" }
bs58 = { workspace = true }
smol_str = { version = "0.3.2", features = ["serde"] }

[dev-dependencies]
