[package]
name = "wormhole-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace members
wormhole-core = { workspace = true }
wormhole-shortener = { workspace = true }
wormhole-redirector = { workspace = true }
wormhole-storage = { workspace = true }
wormhole-generator = { workspace = true }
wormhole-proto-schema = { workspace = true }
# async runtime
tokio = { workspace = true }
# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8.4" }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.149" }
tower = { version = "0.5", features = ["util"] }
jiff = { workspace = true, features = ["serde"] }
typed-builder = { workspace = true }
async-trait = { workspace = true }
# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# CLI
clap = { workspace = true, features = ["derive", "env"] }
