[package]
name = "wormhole-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "bin/http/main.rs"

[dependencies]
# workspace members
wormhole-core = { workspace = true }
wormhole-shortener = { workspace = true }
wormhole-redirector = { workspace = true }
wormhole-storage = { workspace = true }
wormhole-generator = { workspace = true }
wormhole-proto-schema = { workspace = true }
# async runtime
tokio = { workspace = true }
# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true, features = ["log-tracer"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
# http
axum = { version = "0.8.4" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
# serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.149" }
jiff = { workspace = true, features = ["serde"] }
typed-builder = { workspace = true }
async-trait = { workspace = true }
# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# CLI
clap = { workspace = true, features = ["derive", "env"] }
