[package]
name = "wormhole-proto-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wormhole-core = { workspace = true }
# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
# utils
bs58 = { workspace = true }
# error
thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]
