[package]
name = "wormhole-redirector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace members
wormhole-core = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Redis
redis = { workspace = true, features = [
  "tokio-comp",
  "connection-manager",
  "sentinel",
] }

# In-memory cache
moka = { version = "0.12", features = ["future"] }

# Typed builder
typed-builder = { workspace = true }

# Serialization
serde_json = "1.0"

# Time
jiff = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wormhole-test-infra = { workspace = true }
