[package]
name = "wormhole-redirector"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wormhole-redirector-grpc-server"
path = "bin/grpc/main.rs"


[dependencies]
# Workspace members
wormhole-core = { workspace = true }
wormhole-proto-schema = { workspace = true }
wormhole-storage = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Redis
redis = { workspace = true, features = [
  "tokio-comp",
  "connection-manager",
  "sentinel",
  "json",
] }
deadpool-redis = { version = "0.22.1", features = ["sentinel", "json"] }

# Bloom filter
bloomfilter = { version = "3" }

# In-memory cache
moka = { version = "0.12", features = ["future"] }

# Typed builder
typed-builder = { workspace = true }

# Serialization
serde_json = "1.0"

# Time
jiff = { workspace = true }

# Tracing
tracing = { workspace = true }
parking_lot = "0.12.5"

# gRPC
tonic = { workspace = true }

[dev-dependencies]
wormhole-test-infra = { workspace = true }
awaitility = "0.4.1"
