[package]
name = "wormhole-redirector"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wormhole-redirector-grpc-server"
path = "bin/grpc/main.rs"


[dependencies]
# Workspace members
wormhole-core = { workspace = true }
wormhole-cache = { workspace = true }
wormhole-proto-schema = { workspace = true }
wormhole-storage = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

thiserror = { workspace = true }

# Time
jiff = { workspace = true }

# Tracing
tracing = { workspace = true }

# gRPC
tonic = { workspace = true }
prost-types = { workspace = true }
