[package]
name = "wormhole-shortener"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shortener"
path = "bin/grpc/main.rs"

[[bench]]
name = "shorten_mysql_qps"
path = "benches/shorten_mysql_qps.rs"
harness = false

[dependencies]
# Workspace members
wormhole-core = { workspace = true }
wormhole-generator = { workspace = true }
wormhole-proto-schema = { workspace = true }
wormhole-storage = { workspace = true }
wormhole-tinyflake = { workspace = true }
# Async
async-trait = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
# Time
jiff = { workspace = true }
# gRPC
tonic = { workspace = true }
prost-types = { workspace = true }
tonic-health = { workspace = true }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls"] }
wormhole-test-infra = { workspace = true }
