[package]
name = "wormhole-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wormhole-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time
jiff = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Concurrency
dashmap = "6"

# MySQL
sqlx = { workspace = true, features = ["mysql", "runtime-tokio-rustls"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wormhole-test-infra = { workspace = true }
