[package]
name = "wormhole-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace members
wormhole-tinyflake = { workspace = true }

# Error handling
thiserror = { workspace = true }

# utils
bs58 = { workspace = true }
smol_str = { version = "0.3.2" }
