[package]
name = "wormhole-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-log = { version = "0.2.0" }
tracing-opentelemetry = { version = "0.32.1" }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "trace",
  "http-json",
] }
axum = "0.8.8"
tonic = { workspace = true }
