[package]
name = "wormhole-tinyflake"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tinyflake"
path = "bin/grpc/main.rs"

[dependencies]
modular-bitfield = { version = "0.13.1" }
thiserror = { workspace = true }
typed-builder = { workspace = true }
jiff = { workspace = true }
# gRPC server
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
# async runtime
tokio = { workspace = true }
# telemetry
wormhole-telemetry = { workspace = true }
tracing = { workspace = true }
# CLI
clap = { workspace = true, features = ["derive", "env"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
glob = { version = "0.3.3" }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]
